xboxdrv 0.4.14 - (??/May/2010)
==============================

* added device_id handling to --ui-buttonmap and --ui-axismap, allows
  the creation of multiple input devices from a single controller
* added shifting to --ui-buttonmap, allows sending of different events
  when a shift button is pressed
* added support to send keyboard combination from --ui-buttonmap
* added --mouse, a simple shortcut to enable mouse emulation
* added dummy events to the mouse device to let it register properly
  by the kernel without messing with hal
* auto-detect USB endpoints on Xbox1 controller


xboxdrv 0.4.13 - (13/May/2010)
==============================

* added --mimic-xpad
* added --no-extra-devices


xboxdrv 0.4.12 - (08/May/2010)
==============================

* added --four-way-restrictor
* added --dpad-rotation
* added proper man pages for xboxdrv and xboxdrv-daemon


xboxdrv 0.4.11 - (01/May/2010)
==============================

* added --axis-sensitivity
* added number aliases for button names
* added left/right/up/down aliases for dpad
* some compiler warnings got cleaned up
* confusing uinput error messages got cleaned up
* fixed missing 'report sync' event that broke keyboard emulation


xboxdrv 0.4.10 - (17/Feb/2010)
==============================

* fixed mouse emulation a bit, still somewhat broken
* Mad Catz Xbox 360 controller support
* Harmonix controller support
* minor compile fix (missing string.h)


xboxdrv 0.4.9 - (01/Nov/2009)
=============================

* Saitek P2500 support (no rumble, untested)
* Hori Real Arcade Pro Ex support
* changes in the thread handling to reduce latency
* include fixes for g++-4.4


xboxdrv 0.4.8 - (30/Jul/2009)
=============================

* usb reading in separate thread, should fix missed events and stuck buttons
* some SCons configuration magic for better compatibility


xboxdrv 0.4.7 - (29/Jul/2009)
=============================

* support for Pelican TSZ360 pad
* support for Saitek P3200 pad